<resources>
    <string name="app_name">EasyPay</string>

    <!-- Strings related to main -->
    <string name="prompt_phone">Номер телефона</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Телефонный номер введен неверно</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_field_required">Это обязательное поле</string>
    <string name="title_activity_user">Пользователь</string>
    <string name="title_activity_history">История платежей</string>
    <string name="welcome">Добро пожаловать в</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="terminals">Терминалы</string>
    <string name="info">Информация</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="registration_steps">Для регистрации введите Ваш мобильный номер и придумайте пароль. На указанный номер будет отправлено смс-сообщение с кодом подтверждения регистрации.</string>
    <string name="what_is_your_name">Как нам к Вам обращаться?</string>
    <string name="repeat_password">Повторный ввод пароля</string>
    <string name="next">Далее</string>
    <string name="exit">Выход</string>
    <string name="settings">Настройки</string>
    <string name="default_name">Имя Фамилия</string>
    <string name="profile_progress">Заполнено профиль на 0%</string>
    <string name="profile_progress_value">Заполнено профиль на %d%%</string>
    <string name="money_transfers">Денежные переводы</string>
    <string name="cards">Карты</string>
    <string name="wallets">Кошельки</string>
    <string name="notifications">"Уведомления "</string>
    <string name="payment_calendar">Календарь платежей</string>
    <string name="payment_history">История платежей</string>
    <string name="my_payments">Мои платежи</string>
    <string name="pay_services">Оплата услуг</string>
    <string name="network_error">Возникли проблемы при получении данных! Проверьте подключение к интернету.</string>
    <string name="uan">"%d грн"</string>
    <string name="default_amount">0 грн</string>
    <string name="default_description">Описание платежа отсутствует</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Strings related to Settings -->
    <string name="limits">Лимиты</string>
    <string name="change_password">Изменить пароль</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="activity">Активность</string>
    <string name="my_address">Мои адреса</string>
    <string name="profile">Профиль</string>
    <string name="default_address">Анны Ахматовой 1, кв 313</string>
    <string name="rus">Русский</string>
    <string name="my_payments_settings">Мои платежи (квитанции)</string>
    <string name="interesting_proposals">Выгодные предложения EasyPay</string>
    <string name="def_phone">+380.........</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="default_mail">name@domain.com</string>
    <string name="email">Email</string>
    <string name="contacts">Контакты</string>
    <string name="common">Общее:</string>
    <string name="account_modify">Управление аккаунтом</string>
    <string name="this_is_first_page">Это первая страница.</string>
    <string name="this_is_last_page">Это последняя страница.</string>
    <string name="wrong_password">Пароль введен неверно</string>
    <string name="dd_mm_yyyy">dd.mm.yyyy</string>
</resources>
