<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nice_snow_2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="@dimen/big_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:scaleType="centerInside"
            android:src="@drawable/easypay" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/orange_button"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/chevron_right_24"
                android:gravity="end|center_vertical"
                android:text="@string/forget_password"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>

        <Button
            android:id="@+id/registration"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_stroke"
            android:text="@string/registration"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/light_grey"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/info"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/one"
                android:layout_weight="1"
                android:background="@color/middle_grey"
                android:drawableLeft="@drawable/questions"
                android:paddingLeft="@dimen/small_margin"
                android:text="@string/info"
                android:textStyle="bold" />

            <Button
                android:id="@+id/terminals"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one"
                android:layout_weight="1"
                android:background="@color/middle_grey"
                android:drawableLeft="@drawable/cashier_machine"
                android:paddingLeft="@dimen/small_margin"
                android:text="@string/terminals"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
